apps/mesh-config/authorization-policies/demo-deny-all.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: demo
spec: {}
